--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-nav-bar></app-nav-bar>
+<div class="main-wrap">
+    <app-nav-bar></app-nav-bar>
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+</div>
