create content page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div class="main-wrap">
     <app-nav-bar></app-nav-bar>
 
-    <router-outlet></router-outlet>
+    <div class="content-right">
+        <router-outlet></router-outlet>
+    </div>
 </div>
