--- a/src/app/pages/invoice/invoice.component.html
+++ b/src/app/pages/invoice/invoice.component.html
@@ -1,1 +1,142 @@
-<div>asda</div>
+<div class="main-wrap">
+  <div class="header">
+      <div class="menu-bar">
+        <img src="assets\img\menu-symbol.png" alt="">
+      </div>
+      <div class="right-menu">
+        <img class="bell" src="assets\img\bell.svg" alt="">
+        <img class="messege" src="assets\img\messege.svg" alt="">
+        <div class="user-wrap">
+          <img src="assets\img\user.png" alt="">
+          <div class="caret">
+            <img src="assets\img\down-arrow.png" alt="">
+          </div>
+        </div>
+      </div>
+  </div>
+  <div class="tab-address">
+   <span>Document Automation and Optimization </span>
+   <span class="caret-right"> <img src="assets\img\down-arrow.png" alt=""> </span>
+   <span> Invoice </span>
+   <span class="caret-right"> <img src="assets\img\down-arrow.png" alt=""> </span>
+   <span> Inbox </span>
+  </div>
+  <div class="content">
+      <div class="head">
+          <div class="lable">
+            My Invoices
+          </div>
+          <div class="button-wrap">
+              <button class="bg-blu">
+                <img src="assets\img\plus.png" alt="">
+                Create Invoices
+              </button>
+              <button class="bg-green">
+                Sent Invoices
+              </button>
+          </div>
+      </div>
+      <div class="row-head row-content">
+          <div class="column-1">  
+            #
+          </div>
+          <div class="column-2">
+            Sender 
+          </div>
+          <div class="column-3">
+            Invoice Hash 
+          </div>
+          <div class="column-4">
+            Amount
+          </div>
+          <div class="column-5">
+            Status
+          </div>
+      </div>
+      <div class="row-content">
+          <div class="column-1">  
+            1
+          </div>
+          <div class="column-2">
+            kenotalor@yahoo.com 
+          </div>
+          <div class="column-3">
+            9 
+          </div>
+          <div class="column-4">
+            1500 CLO
+          </div>
+          <div class="column-5">
+             <div class="status">Sent</div>  
+          </div>
+      </div>
+      <div class="row-content">
+          <div class="column-1">  
+            1192
+          </div>
+          <div class="column-2">
+            kenotalor@yahoo.com 
+          </div>
+          <div class="column-3">
+            9 
+          </div>
+          <div class="column-4">
+            1500 CLO
+          </div>
+          <div class="column-5">
+             Due
+          </div>
+      </div>
+      <div class="row-content">
+          <div class="column-1">  
+            1
+          </div>
+          <div class="column-2">
+            kenotalor@yahoo.com 
+          </div>
+          <div class="column-3">
+            9 
+          </div>
+          <div class="column-4">
+            1500 CLO
+          </div>
+          <div class="column-5">
+             <div class="status">Sent</div>  
+          </div>
+      </div>
+      <div class="row-content">
+          <div class="column-1">  
+            1
+          </div>
+          <div class="column-2">
+            kenotalor@yahoo.com 
+          </div>
+          <div class="column-3">
+            9 
+          </div>
+          <div class="column-4">
+            1500 CLO
+          </div>
+          <div class="column-5">
+             Due 
+          </div>
+      </div>
+      <div class="row-content">
+          <div class="column-1">  
+            1
+          </div>
+          <div class="column-2">
+            kenotalor@yahoo.com 
+          </div>
+          <div class="column-3">
+            9 
+          </div>
+          <div class="column-4">
+            1500 CLO
+          </div>
+          <div class="column-5">
+             <div class="status">Sent</div>  
+          </div>
+      </div>
+  </div>
+</div>
