--- a/src/app/shared/nav-bar/nav-bar.component.sass
+++ b/src/app/shared/nav-bar/nav-bar.component.sass
@@ -2,6 +2,8 @@
     padding: 30px 35px 40px 40px
     background: #e8e7ff
     width: 245px
+    min-height: 100vh
+    height: calc(100% - 70px)
     .logo
         text-align: center
         margin-bottom: 80px
