--- a/src/app/pages/invoice/invoice.component.html
+++ b/src/app/pages/invoice/invoice.component.html
@@ -1,25 +1,37 @@
 <div class="main-wrap">
   <div class="header">
       <div class="menu-bar">
-        <img src="assets\img\menu-symbol.png" alt="">
+        <div class="icon-bar">
+          <!-- <img src="assets\img\menu-symbol.png" alt=""> -->
+          <i class="fa-bars fa"></i>
+        </div>
       </div>
       <div class="right-menu">
         <img class="bell" src="assets\img\bell.svg" alt="">
-        <img class="messege" src="assets\img\messege.svg" alt="">
+        <!-- <img class="messege" src="assets\img\messege.svg" alt=""> -->
+        <!-- <i class="fa fa-bell bell"></i> -->
+        <i class="fa fa-envelope-o messege"></i>
         <div class="user-wrap">
           <img src="assets\img\user.png" alt="">
           <div class="caret">
-            <img src="assets\img\down-arrow.png" alt="">
+            <!-- <img src="assets\img\down-arrow.png" alt=""> -->
+            <i class=" fa-angle-down fa"></i>
           </div>
         </div>
       </div>
   </div>
   <div class="tab-address">
-   <span>Document Automation and Optimization </span>
-   <span class="caret-right"> <img src="assets\img\down-arrow.png" alt=""> </span>
-   <span> Invoice </span>
-   <span class="caret-right"> <img src="assets\img\down-arrow.png" alt=""> </span>
-   <span> Inbox </span>
+    <span>Document Automation and Optimization </span>
+    <span class="caret-right">
+      <!-- <img src="assets\img\down-arrow.png" alt="">  -->
+      <i class="fa-angle-right fa"></i>
+    </span>
+    <span> Invoice </span>
+    <span class="caret-right"> 
+      <!-- <img src="assets\img\down-arrow.png" alt="">  -->
+      <i class="fa-angle-right fa"></i>
+      </span>
+    <span> Inbox </span>
   </div>
   <div class="content">
       <div class="head">
@@ -28,7 +40,8 @@
           </div>
           <div class="button-wrap">
               <button class="bg-blu">
-                <img src="assets\img\plus.png" alt="">
+                <!-- <img src="assets\img\plus.png" alt=""> -->
+                <i class="fa-plus fa"></i>
                 Create Invoices
               </button>
               <button class="bg-green">
@@ -36,107 +49,116 @@
               </button>
           </div>
       </div>
-      <div class="row-head row-content">
-          <div class="column-1">  
-            #
-          </div>
-          <div class="column-2">
-            Sender 
-          </div>
-          <div class="column-3">
-            Invoice Hash 
-          </div>
-          <div class="column-4">
-            Amount
-          </div>
-          <div class="column-5">
-            Status
-          </div>
+
+      <div class="scroll-box-outer">
+          <div class="shadow-box"></div>
+          <div class="scroll-box">
+              <div class="scroll-box-inside">
+                  <div class="row-head row-content">
+                      <div class="column-1">  
+                        #
+                      </div>
+                      <div class="column-2">
+                        Sender 
+                      </div>
+                      <div class="column-3">
+                        Invoice Hash 
+                      </div>
+                      <div class="column-4">
+                        Amount
+                      </div>
+                      <div class="column-5">
+                        Status
+                      </div>
+                  </div>
+                  <div class="row-content">
+                      <div class="column-1">  
+                        1
+                      </div>
+                      <div class="column-2">
+                        kenotalor@yahoo.com 
+                      </div>
+                      <div class="column-3">
+                        9 
+                      </div>
+                      <div class="column-4">
+                        1500 CLO
+                      </div>
+                      <div class="column-5">
+                         <div class="status">Sent</div>  
+                      </div>
+                  </div>
+                  <div class="row-content">
+                      <div class="column-1">  
+                        1192
+                      </div>
+                      <div class="column-2">
+                        kenotalor@yahoo.com 
+                      </div>
+                      <div class="column-3">
+                        9 
+                      </div>
+                      <div class="column-4">
+                        1500 CLO
+                      </div>
+                      <div class="column-5">
+                         Due
+                      </div>
+                  </div>
+                  <div class="row-content">
+                      <div class="column-1">  
+                        1
+                      </div>
+                      <div class="column-2">
+                        kenotalor@yahoo.com 
+                      </div>
+                      <div class="column-3">
+                        9 
+                      </div>
+                      <div class="column-4">
+                        1500 CLO
+                      </div>
+                      <div class="column-5">
+                         <div class="status">Sent</div>  
+                      </div>
+                  </div>
+                  <div class="row-content">
+                      <div class="column-1">  
+                        1
+                      </div>
+                      <div class="column-2">
+                        kenotalor@yahoo.com 
+                      </div>
+                      <div class="column-3">
+                        9 
+                      </div>
+                      <div class="column-4">
+                        1500 CLO
+                      </div>
+                      <div class="column-5">
+                         Due 
+                      </div>
+                  </div>
+                  <div class="row-content">
+                      <div class="column-1">  
+                        1
+                      </div>
+                      <div class="column-2">
+                        kenotalor@yahoo.com 
+                      </div>
+                      <div class="column-3">
+                        9 
+                      </div>
+                      <div class="column-4">
+                        1500 CLO
+                      </div>
+                      <div class="column-5">
+                         <div class="status">Sent</div>  
+                      </div>
+                  </div>
+              </div>
+            </div>
       </div>
-      <div class="row-content">
-          <div class="column-1">  
-            1
-          </div>
-          <div class="column-2">
-            kenotalor@yahoo.com 
-          </div>
-          <div class="column-3">
-            9 
-          </div>
-          <div class="column-4">
-            1500 CLO
-          </div>
-          <div class="column-5">
-             <div class="status">Sent</div>  
-          </div>
-      </div>
-      <div class="row-content">
-          <div class="column-1">  
-            1192
-          </div>
-          <div class="column-2">
-            kenotalor@yahoo.com 
-          </div>
-          <div class="column-3">
-            9 
-          </div>
-          <div class="column-4">
-            1500 CLO
-          </div>
-          <div class="column-5">
-             Due
-          </div>
-      </div>
-      <div class="row-content">
-          <div class="column-1">  
-            1
-          </div>
-          <div class="column-2">
-            kenotalor@yahoo.com 
-          </div>
-          <div class="column-3">
-            9 
-          </div>
-          <div class="column-4">
-            1500 CLO
-          </div>
-          <div class="column-5">
-             <div class="status">Sent</div>  
-          </div>
-      </div>
-      <div class="row-content">
-          <div class="column-1">  
-            1
-          </div>
-          <div class="column-2">
-            kenotalor@yahoo.com 
-          </div>
-          <div class="column-3">
-            9 
-          </div>
-          <div class="column-4">
-            1500 CLO
-          </div>
-          <div class="column-5">
-             Due 
-          </div>
-      </div>
-      <div class="row-content">
-          <div class="column-1">  
-            1
-          </div>
-          <div class="column-2">
-            kenotalor@yahoo.com 
-          </div>
-          <div class="column-3">
-            9 
-          </div>
-          <div class="column-4">
-            1500 CLO
-          </div>
-          <div class="column-5">
-             <div class="status">Sent</div>  
-          </div>
-      </div>
+      
   </div>
 </div>
