--- a/src/app/pages/invoice/invoice.component.sass
+++ b/src/app/pages/invoice/invoice.component.sass
@@ -1,110 +1,151 @@
+@import "../../../assets/sass/_variables.sass"
+@import "../../../assets/sass/_mixins.sass"
+
 .main-wrap
-    background: #f9f9f9
+    background: $bg-color   
     min-height: 100vh
     height: 100%
-    .header
-        padding: 35px 80px 0 35px
+.header
+    padding: 35px 80px 0 35px
+    display: flex
+    justify-content: space-between
+    align-items: center
+    margin-bottom: 80px
+    +screen-lt-md
+        padding-right: 35px
+    .menu-bar
+        cursor: pointer
+        .icon-bar
+            font-size: 24px
+            +screen-lt-md
+                display: none
+    .right-menu
         display: flex
-        justify-content: space-between
         align-items: center
-        margin-bottom: 80px
-        .menu-bar
+        .bell
+            margin-right: 35px
             cursor: pointer
-        .right-menu
-            display: flex
-            align-items: center
-            .bell
-                margin-right: 35px
-                cursor: pointer
-            .messege
-                margin-right: 40px
-                cursor: pointer
-            .user-wrap
-                display: flex
-                align-items: center
-                cursor: pointer
-                img
-                    margin-right: 5px
-                    widows: 40px
-                    border-radius: 50px
-    .tab-address
-        color: #c3c3c3
-        margin-bottom: 30px
-        padding-left: 35px
-        font-weight: 500
-        .caret-right
-            display: inline-block
-            transform: rotate(-90deg)
-            margin-left: 5px
-            margin-right: 5px
-            opacity: 0.4
-    .content
-        padding-left: 35px
-        padding-right: 80px
-        .head
-            display: flex
-            align-items: center
-            justify-content: space-between
-            margin-bottom: 30px
-            .lable
-                font-size: 18px
-                font-weight: 600
-            .button-wrap
-                display: flex
-                button
-                    border: none
-                    outline: none
-                    cursor: pointer
-                    height: 40px
-                    width: 188px
-                    align-items: center
-                    justify-content: center
-                    color: white
-                    font-weight: 600
-                    display: flex
-                    ont-size: 15px
-                .bg-blu
-                    background-color: #8680ff
-                    margin-right: 20px
-                    img
-                        margin-right: 10px
-                .bg-green
-                    background-color: rgb(34, 225, 142)
-        .row-content
-            display: flex
-            background: white
-            padding: 0px 40px
-            justify-content: space-between
-            height: 44px
-            align-items: center
-            margin-bottom: 12px
-            padding-right: 15px
-            transition: all 0.2s
-            .column-1
-                width: calc(100% / 5 - 60px)
-            .column-2
-                width: calc(100% / 5 + 59px)
-            .column-3
-                width: calc(100% / 5 + 85px)
-                text-align: center
-            .column-4
-                width: calc(100% / 5 - 42px)
-                text-align: center
-            .column-5
-                width: calc(100% / 5 - 42px)
-                text-align: center
-                display: flex
-                justify-content: center
-                .status
-                    width: 88px
-                    background: #22e18e
-                    height: 35px
-                    display: flex
-                    justify-content: center
-                    align-items: center
-        .row-content:hover
-            background: #f3eeee
-        .row-head
+            color: $gray-200
+        .messege
+            margin-right: 40px
+            cursor: pointer
+            color: $gray-200
             font-weight: bold
-        .row-head:hover
-            background: white
+        .user-wrap
+            display: flex
+            align-items: center
+            cursor: pointer
+            img
+                margin-right: 5px
+                width: 40px
+                border-radius: 50px
+            .fa
+                color: $gray-200
+                margin-left: 5px
+.tab-address
+    color: $gray-200
+    margin-bottom: 30px
+    padding-left: 35px
+    font-weight: 500
+    .caret-right
+        display: inline-block
+        margin-left: 5px
+        margin-right: 5px
+.content
+    padding-left: 35px
+    padding-right: 80px
+    margin-bottom: 40px
+    +screen-lt-md
+        padding-right: 35px
+    .head
+        display: flex
+        align-items: center
+        justify-content: space-between
+        margin-bottom: 30px
+        flex-wrap: wrap
+        +screen-lt-sm
+            justify-content: center
+            flex-flow: column
+        .lable
+            font-size: $fs-18
+            font-weight: 600
+            +screen-lt-sm
+                margin-bottom: 10px
+        .button-wrap
+            display: flex
+            flex-wrap: wrap
+            +screen-lt-sm
+                align-items: center
+                flex-flow: column
+
+            button
+                border: none
+                outline: none
+                cursor: pointer
+                height: 40px
+                width: 188px
+                align-items: center
+                justify-content: center
+                color: $white
+                font-weight: 600
+                display: flex
+                font-size: $fs-15
+            .bg-blu
+                background-color: $blue-btn
+                margin-right: 20px
+                +screen-lt-sm
+                    margin-bottom: 10px
+                    margin-right: 0px
+                .fa
+                    margin-right: 10px
+                    font-size: 18px
+            .bg-green
+                background-color: $green-btn
+.row-content
+    display: flex
+    background: $white
+    padding: 0px 40px
+    justify-content: space-between
+    height: 44px
+    align-items: center
+    margin-bottom: 12px
+    padding-right: 15px
+    transition: all 0.2s
+    cursor: pointer
+    .column-1
+        width: calc(100% / 5 - 60px)
+    .column-2
+        width: calc(100% / 5 + 59px)
+    .column-3
+        width: calc(100% / 5 + 85px)
+        text-align: center
+    .column-4
+        width: calc(100% / 5 - 42px)
+        text-align: center
+    .column-5
+        width: calc(100% / 5 - 42px)
+        text-align: center
+        display: flex
+        justify-content: center
+        .status
+            width: 88px
+            background: $green-success
+            height: 35px
+            display: flex
+            justify-content: center
+            align-items: center
+    &:hover
+        background: $gray-300
+.row-head
+    font-weight: bold
+    &:hover
+        background: $white
+
+.scroll-box
+    .scroll-box-inside
+        min-width: 780px
+        max-width: 100%
+.shadow-box
+    display: none
+    +screen-lt-md
+        display: block
