--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,5 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+@import "assets/sass/_styles.sass"
+
 body
     margin: 0
     font-family: 'Roboto', sans-serif
     color: #211f49
+    &::-webkit-scrollbar 
+      width: 10px
+      height: 5px
+    &::-webkit-scrollbar-track 
+        background: #f1f1f1
+    &::-webkit-scrollbar-thumb 
+        background: #a5f3d1
+        border-radius: 100px
+    &::-webkit-scrollbar-thumb:hover 
+        background: #8fd4b6
+.hide
+    display: none !important
+
+.scroll-box-outer
+  position: relative
+  .shadow-box
+    position: absolute
+    width: 100%
+    height: 100%
+    box-shadow: inset 22px 0px 25px -16px #f9f9f9, inset -22px 0px 25px -16px #f9f9f9
+    pointer-events: none
+.scroll-box
+  overflow-x: auto
+  // padding-bottom: 5px
+  &::-webkit-scrollbar 
+      width: 5px
+      height: 5px
+  &::-webkit-scrollbar-track 
+      background: #f1f1f1
+  &::-webkit-scrollbar-thumb 
+      background: #a5f3d1
+      border-radius: 100px
+  &::-webkit-scrollbar-thumb:hover 
+      background: #8fd4b6
+  // &:hover
+  //   overflow-x: auto
+  //   padding-bottom: 0
